upgrade to spring boot 4.0.0